--- a/src/skins/de/dal33t/powerfolder/skin/greendream/icons.properties
+++ b/src/skins/de/dal33t/powerfolder/skin/greendream/icons.properties
@@ -126,21 +126,20 @@ sort_up.icon=de/dal33t/powerfolder/skin/greendream/icons/SortUp.png
 splash.icon=de/dal33t/powerfolder/skin/greendream/icons/Splash.png
 stop.icon=de/dal33t/powerfolder/skin/greendream/icons/Abort.png
 sleep.icon=de/dal33t/powerfolder/skin/greendream/icons/Sleep.png
-# For now use default icons
-#action_sync_folder.icon=de/dal33t/powerfolder/skin/greendream/icons/Sync00.png
-#sync.icon=de/dal33t/powerfolder/skin/greendream/icons/Sync00.png
-#sync00.icon=de/dal33t/powerfolder/skin/greendream/icons/Sync00.png
-#sync01.icon=de/dal33t/powerfolder/skin/greendream/icons/Sync01.png
-#sync02.icon=de/dal33t/powerfolder/skin/greendream/icons/Sync02.png
-#sync03.icon=de/dal33t/powerfolder/skin/greendream/icons/Sync03.png
-#sync04.icon=de/dal33t/powerfolder/skin/greendream/icons/Sync04.png
-#sync05.icon=de/dal33t/powerfolder/skin/greendream/icons/Sync05.png
-#sync06.icon=de/dal33t/powerfolder/skin/greendream/icons/Sync06.png
-#sync07.icon=de/dal33t/powerfolder/skin/greendream/icons/Sync07.png
-#sync08.icon=de/dal33t/powerfolder/skin/greendream/icons/Sync08.png
-#sync09.icon=de/dal33t/powerfolder/skin/greendream/icons/Sync09.png
-#sync10.icon=de/dal33t/powerfolder/skin/greendream/icons/Sync10.png
-#sync11.icon=de/dal33t/powerfolder/skin/greendream/icons/Sync11.png
+action_sync_folder.icon=de/dal33t/powerfolder/skin/greendream/icons/Sync00.png
+sync.icon=de/dal33t/powerfolder/skin/greendream/icons/Sync00.png
+sync00.icon=de/dal33t/powerfolder/skin/greendream/icons/Sync00.png
+sync01.icon=de/dal33t/powerfolder/skin/greendream/icons/Sync01.png
+sync02.icon=de/dal33t/powerfolder/skin/greendream/icons/Sync02.png
+sync03.icon=de/dal33t/powerfolder/skin/greendream/icons/Sync03.png
+sync04.icon=de/dal33t/powerfolder/skin/greendream/icons/Sync04.png
+sync05.icon=de/dal33t/powerfolder/skin/greendream/icons/Sync05.png
+sync06.icon=de/dal33t/powerfolder/skin/greendream/icons/Sync06.png
+sync07.icon=de/dal33t/powerfolder/skin/greendream/icons/Sync07.png
+sync08.icon=de/dal33t/powerfolder/skin/greendream/icons/Sync08.png
+sync09.icon=de/dal33t/powerfolder/skin/greendream/icons/Sync09.png
+sync10.icon=de/dal33t/powerfolder/skin/greendream/icons/Sync10.png
+sync11.icon=de/dal33t/powerfolder/skin/greendream/icons/Sync11.png
 system_monitor.icon=de/dal33t/powerfolder/skin/greendream/icons/SystemMonitor.png
 systray_default.icon=de/dal33t/powerfolder/skin/greendream/icons/Icon32x32.png
 unknown.icon=de/dal33t/powerfolder/skin/greendream/icons/Unknown.png
