Allow online archive mode set from client, fixes #1716

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -840,7 +840,8 @@ friends_panel.n_a=n/a
 friends_panel.unable_to_connect=Currently online (Unable to connect)
 
 general.application.name={APPNAME}
-general.archive_mode=File archive (local)
+general.local_archive_mode=File archive (local)
+general.online_archive_mode=File archive (online)
 general.accept=Accept
 general.reject=Reject
 general.apply=Apply
