Enhanced disable text, fixes #1911

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -926,6 +926,8 @@ home_tab.online_storage.account_connecting.tips={APPNAME} is connecting to this 
 home_tab.online_storage.account_connecting={0} connecting...
 home_tab.online_storage.account_disabled.tips=This account has been disabled
 home_tab.online_storage.account_disabled={0} disabled
+home_tab.online_storage.account_disabled_expiration={0} expired on {1}
+home_tab.online_storage.account_disabled_usage={0} disabled (overused)
 home_tab.online_storage.account_not_logged_in.tips={APPNAME} is logging in to this account
 home_tab.online_storage.account_not_logged_in={0} logging in...
 home_tab.online_storage.no_password.tips=Click here to enter account password
