Consistent directory chooser, using standard chooser, refs #1898

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -888,6 +888,7 @@ general.seconds=Second(s)
 general.server=Server
 general.email=Email
 general.password=Password
+general.select=Select
 general.size=Size
 general.sunday=Sunday
 general.synchonisation=Synchronization
@@ -1238,7 +1239,6 @@ settings_tab.basedir.text=It is not possible to move a folder to the base direct
 settings_tab.confirm_local_folder_move.text=Local folder will be moved from\n{0}\nto\n{1}.
 settings_tab.confirm_local_folder_move.title=Confirm move
 settings_tab.download_script=Script after download
-settings_tab.download_script.select=Select
 settings_tab.edit_a_pattern.text=Edit a pattern to exclude files from synchronization
 settings_tab.edit_a_pattern.title=Edit a pattern
 settings_tab.folder_not_empty.title=Folder not empty
