Powerfolder directory chooser - reloaded, fixes #1898

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -31,6 +31,10 @@ action_add_directory.description=Add directory
 action_add_directory.key=A
 action_add_directory.name=Add
 
+action_directory_new.description=Create a new directory
+action_directory_new.key=N
+action_directory_new.name=New Directory
+
 action_add_friend.description=Add computer to friend list
 action_add_friend.key=A
 action_add_friend.name=Add
@@ -554,6 +558,9 @@ dialog.create_edit_profile.suggestNameTemplateN={0} (copy {1})
 dialog.create_edit_profile.sync_deletion=Synchronize deleted files
 dialog.create_edit_profile.time_between_scans=Scan for changes every
 dialog.create_edit_profile.title_create=Create custom transfer mode
+dialog.directory-chooser.title=Choose directory
+dialog.new-directory-creator.text=New directory
+dialog.new-directory-creator.title=New directory
 dialog.single_file_accept.title=Single file accept
 dialog.single_file_accept.line_1=You have received a single file offer from
 dialog.single_file_accept.line_2={0} for file {1}.
@@ -1179,6 +1186,7 @@ preferences.dialog.titleProcessing=processing...
 preferences.dialog.underline_link=Always underline links
 preferences.dialog.magnetic_frame=Move child windows with main window
 preferences.dialog.inline_info=Display detail information in same window
+preferences.dialog.pf_chooser=Use PowerFolder directory chooser
 preferences.dialog.translucent_frame=Make main frame translucent
 preferences.dialog.min_to_sys_tray=Minimize to system tray
 preferences.dialog.ui_locked=Lock on startup
