translations for new folder problems, refs #1898

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -1187,6 +1187,9 @@ preferences.dialog.underline_link=Always underline links
 preferences.dialog.magnetic_frame=Move child windows with main window
 preferences.dialog.inline_info=Display detail information in same window
 preferences.dialog.pf_chooser=Use PowerFolder directory chooser
+dialog.directorychooser.new.description=New directory
+dialog.directorychooser.new.exists=This directory already exists\n\n{0}
+dialog.directorychooser.new.problem=There was a problem creating the directory\n\n{0}
 preferences.dialog.translucent_frame=Make main frame translucent
 preferences.dialog.min_to_sys_tray=Minimize to system tray
 preferences.dialog.ui_locked=Lock on startup
