Prevent creation of folders with the same name as another foder, fixes #1919

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -1450,6 +1450,8 @@ wizard.control.next.description=Go to next wizard step
 wizard.control.next=Next
 wizard.worker.problem=Problem occurred
 wizard.create_folder.problems=There were problems creating the folder(s).
+# {1} ==> wizard.what_to_do.synchronized_folder, {2} ==> wizard.what_to_do.join_online
+wizard.create_folder.duplicates=A folder with name '{0}' already exists.\nPlease use '{1}' to create a folder with a different name,\nor '{2}' to join an existing online folder.
 wizard.create_folder.title=Creating Folder(s)
 wizard.create_folder.working=Creating folder(s), please wait.
 wizard.finish.os_login_text=The login was successful.
