--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -1087,7 +1087,7 @@ preferences.dialog.delta_sync=Delta sync
 preferences.dialog.delta_sync.tooltip=Synchronize only changed file-parts
 preferences.dialog.use_delta_on_internet=on Internet
 preferences.dialog.use_delta_on_lan=on LAN
-preferences.dialog.filesystem.watch=Instant file change detection
+preferences.dialog.filesystem.watch=Instant change detection
 preferences.dialog.filesystem.watch.tooltip=Instantly detects new, changed or deleted files by watching the filesystem. Applies to all folders with periodic scanning only. Ignores scan times.
 preferences.dialog.dialogs.ask_to_add_friend_message=Ask to add message for friend
 preferences.dialog.dialogs.ask_to_add_to_friends_if_node_becomes_member_of_folder=Ask to add to friends if a computer becomes a member of a folder
