Better solution - offer join or duplicate choice, fixes #1919

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -1449,11 +1449,12 @@ wizard.control.help=Help
 wizard.control.next.description=Go to next wizard step
 wizard.control.next=Next
 wizard.worker.problem=Problem occurred
-wizard.create_folder.problems=There were problems creating the folder(s).
-# {1} ==> wizard.what_to_do.synchronized_folder, {2} ==> wizard.what_to_do.join_online
-wizard.create_folder.duplicates=A folder with name '{0}' already exists.\nPlease use '{1}' to create a folder with a different name,\nor '{2}' to join an existing online folder.
 wizard.create_folder.title=Creating Folder(s)
 wizard.create_folder.working=Creating folder(s), please wait.
+wizard.create_folder.found_online.title=Online folder found
+wizard.create_folder.found_online.text=An online folder has been found with this name ({0}).\n\nDo you want to join this online folder?
+wizard.create_folder.found_online.join=Join online folder
+wizard.create_folder.found_online.create=Create duplicate folder
 wizard.finish.os_login_text=The login was successful.
 wizard.finish.os_login_title=Login Successful
 wizard.folder_invitation.intro=Invitation from {0} for folder {1}
