Added activation button to about box

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -452,6 +452,11 @@ about_dialog.app_description={APPDESCRIPTION}
 about_dialog.system_monitor.key=M
 about_dialog.system_monitor.text=Monitor
 about_dialog.system_monitor.tips=Display a system monitor panel
+
+about_dialog.activate.key=A
+about_dialog.activate.text=Activate
+about_dialog.activate.tips=Activates PowerFolder with new license
+
 about_dialog.team=Team
 about_dialog.title=About {APPNAME}
 about_dialog.translators=Translators
