--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -1456,9 +1456,9 @@ wizard.control.next=Next
 wizard.worker.problem=Problem occurred
 wizard.create_folder.title=Creating Folder(s)
 wizard.create_folder.working=Creating folder(s), please wait.
-wizard.create_folder.found_online.title=Online folder found
-wizard.create_folder.found_online.text=An online folder has been found with this name ({0}).\n\nDo you want to join this online folder?
-wizard.create_folder.found_online.join=Join online folder
+wizard.create_folder.found_online.title=Folder already found
+wizard.create_folder.found_online.text=An existing folder has been found with this name ({0}).\n\nDo you want to synchronize with existing folder?
+wizard.create_folder.found_online.join=Sync existing folder (Recommended)
 wizard.create_folder.found_online.create=Create duplicate folder
 wizard.finish.os_login_text=The login was successful.
 wizard.finish.os_login_title=Login Successful
