--- a/build.xml
+++ b/build.xml
@@ -83,8 +83,7 @@ For creation of the installer:
 			<include name="forms-1.2.0.jar" />
 			<include name="looks-2.1.4.jar" />
 			<include name="validation-2.0.1.jar" />
-			<include name="h2-1.1.109.jar" />
-			<include name="ehcache-1.6.0.jar" />
+			<!--<include name="h2-1.1.109.jar" />-->
 			<include name="jcalendar.jar" />
 
 			<include name="synthetica/commons-logging-1.1.jar" />
