--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -931,7 +931,7 @@ home_tab.new_invitations=New invitation(s)
 home_tab.new_single_file_offers=New single file offer(s)
 home_tab.new_warnings=Warning(s)
 home_tab.no_computers=No other computers known
-home_tab.no_folders=No folders configured
+home_tab.no_folders=No folders configured. Press "New Folder" to start.
 home_tab.not_running=Not running
 home_tab.online_storage.account.tips=Click to change account details
 home_tab.online_storage.account={0} (change)
