--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -1017,6 +1017,9 @@ main_tabbed_pane.folders.name=Folders
 main_tabbed_pane.home.description=Information about {APPNAME}
 main_tabbed_pane.home.key=H
 main_tabbed_pane.home.name=Home
+main_tabbed_pane.welcome.key=W
+main_tabbed_pane.welcome.description=Welcome to {APPNAME}
+main_tabbed_pane.welcome.name=Welcome
 
 member.me=Me
 member.non_mutual_friend=No mutual connections
