Welcome message, refs #1940

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -1418,6 +1418,8 @@ uilock.dialog.help=Help
 uilock.dialog.exit=Exit
 uilock.dialog.error.wronglogin=Invalid username or password.
 
+welcome_tab.welcome_text=Welcome to {APPNAME} 
+
 winutils.shortcut.description=This shortcut was placed here by {APPNAME}
 
 wizard.basic_setup.computer_name=Name of this computer
