Move Home to Status and Welcome to Start, refs 1940

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -915,57 +915,57 @@ general.wednesday=Wednesday
 general.what_is_this=What is this?
 general.yesterday=Yesterday
 
-home_tab.computers=Computer(s)
-home_tab.files_available=File(s) available
-home_tab.files_downloads=Download(s)
-home_tab.files_downloads_active=Download(s) ({0} KB/s)
-home_tab.files_uploads=Upload(s)
-home_tab.files_uploads_active=Upload(s) ({0} KB/s)
-home_tab.folders=Folder(s)
-home_tab.in_sync=All folders are in sync
-home_tab.last_synced=Last sync {0}
-home_tab.local=Local
-home_tab.never_synced=Folders never in sync
-home_tab.new_friend_requests=New connection request(s)
-home_tab.new_invitations=New invitation(s)
-home_tab.new_single_file_offers=New single file offer(s)
-home_tab.new_warnings=Warning(s)
-home_tab.no_computers=No other computers known
-home_tab.no_folders=No folders configured. Press "New Folder" to start.
-home_tab.not_running=Not running
-home_tab.online_storage.account.tips=Click to change account details
-home_tab.online_storage.account={0} (change)
-home_tab.online_storage.account_connecting.tips={APPNAME} is connecting to this account
-home_tab.online_storage.account_connecting={0} connecting...
-home_tab.online_storage.account_disabled.tips=This account has been disabled
-home_tab.online_storage.account_disabled={0} disabled
-home_tab.online_storage.account_disabled_expiration={0} expired on {1}
-home_tab.online_storage.account_disabled_usage={0} disabled (overused)
-home_tab.online_storage.account_not_logged_in.tips={APPNAME} is logging in to this account
-home_tab.online_storage.account_not_logged_in={0} logging in...
-home_tab.online_storage.no_password.tips=Click here to enter account password
-home_tab.online_storage.no_password=Log in to Online Storage
-home_tab.online_storage.not_setup.tips=Click here to configure account details
-home_tab.online_storage.not_setup=Not set up yet. Sign up and login here.
+status_tab.computers=Computer(s)
+status_tab.files_available=File(s) available
+status_tab.files_downloads=Download(s)
+status_tab.files_downloads_active=Download(s) ({0} KB/s)
+status_tab.files_uploads=Upload(s)
+status_tab.files_uploads_active=Upload(s) ({0} KB/s)
+status_tab.folders=Folder(s)
+status_tab.in_sync=All folders are in sync
+status_tab.last_synced=Last sync {0}
+status_tab.local=Local
+status_tab.never_synced=Folders never in sync
+status_tab.new_friend_requests=New connection request(s)
+status_tab.new_invitations=New invitation(s)
+status_tab.new_single_file_offers=New single file offer(s)
+status_tab.new_warnings=Warning(s)
+status_tab.no_computers=No other computers known
+status_tab.no_folders=No folders configured. Press "New Folder" to start.
+status_tab.not_running=Not running
+status_tab.online_storage.account.tips=Click to change account details
+status_tab.online_storage.account={0} (change)
+status_tab.online_storage.account_connecting.tips={APPNAME} is connecting to this account
+status_tab.online_storage.account_connecting={0} connecting...
+status_tab.online_storage.account_disabled.tips=This account has been disabled
+status_tab.online_storage.account_disabled={0} disabled
+status_tab.online_storage.account_disabled_expiration={0} expired on {1}
+status_tab.online_storage.account_disabled_usage={0} disabled (overused)
+status_tab.online_storage.account_not_logged_in.tips={APPNAME} is logging in to this account
+status_tab.online_storage.account_not_logged_in={0} logging in...
+status_tab.online_storage.no_password.tips=Click here to enter account password
+status_tab.online_storage.no_password=Log in to Online Storage
+status_tab.online_storage.not_setup.tips=Click here to configure account details
+status_tab.online_storage.not_setup=Not set up yet. Sign up and login here.
 
-home_tab.online_storage.usage=Online storage in use: {0} ({1}%)
-home_tab.online_storage.title=Account
-home_tab.sync_eta=Estimated sync: {0}
-home_tab.sync_unknown=Estimated sync: Unknown
-home_tab.status=Status
-home_tab.synchronizing.0=Sync in progress.
-home_tab.synchronizing.1=Sync in progress..
-home_tab.synchronizing.2=Sync in progress...
-home_tab.tell_friend.text=Tell someone about {APPNAME}
-home_tab.tell_friend.tip=Click here to recommend {APPNAME}
-home_tab.total={0} total
-home_tab.you_have=You have
-pro.home_tab.upgrade_powerfolder=Buy {APPNAME} now
-pro.home_tab.renew_license=Renew {APPNAME}
-pro.home_tab.remaining.tips=Your license will expire in {0} days
-pro.home_tab.remaining={0} day(s) remaining
-pro.home_tab.disabled=Not running. Activate now
-pro.home_tab.disabled.tips=Click to learn why {APPNAME} is currently disabled.
+status_tab.online_storage.usage=Online storage in use: {0} ({1}%)
+status_tab.online_storage.title=Account
+status_tab.sync_eta=Estimated sync: {0}
+status_tab.sync_unknown=Estimated sync: Unknown
+status_tab.status=Status
+status_tab.synchronizing.0=Sync in progress.
+status_tab.synchronizing.1=Sync in progress..
+status_tab.synchronizing.2=Sync in progress...
+status_tab.tell_friend.text=Tell someone about {APPNAME}
+status_tab.tell_friend.tip=Click here to recommend {APPNAME}
+status_tab.total={0} total
+status_tab.you_have=You have
+pro.status_tab.upgrade_powerfolder=Buy {APPNAME} now
+pro.status_tab.renew_license=Renew {APPNAME}
+pro.status_tab.remaining.tips=Your license will expire in {0} days
+pro.status_tab.remaining={0} day(s) remaining
+pro.status_tab.disabled=Not running. Activate now
+pro.status_tab.disabled.tips=Click to learn why {APPNAME} is currently disabled.
 
 image_file_info.resolution=Resolution
 image_file_info.unknown=Unknown
@@ -1014,12 +1014,12 @@ main_tabbed_pane.computers.name=Computers
 main_tabbed_pane.folders.description=Details about other folders
 main_tabbed_pane.folders.key=F
 main_tabbed_pane.folders.name=Folders
-main_tabbed_pane.home.description=Information about {APPNAME}
-main_tabbed_pane.home.key=H
-main_tabbed_pane.home.name=Home
-main_tabbed_pane.welcome.key=W
-main_tabbed_pane.welcome.description=Welcome to {APPNAME}
-main_tabbed_pane.welcome.name=Welcome
+main_tabbed_pane.status.description=Information about {APPNAME}
+main_tabbed_pane.status.key=S
+main_tabbed_pane.status.name=Status
+main_tabbed_pane.start.key=S
+main_tabbed_pane.start.description=Start using {APPNAME}
+main_tabbed_pane.start.name=Start
 
 member.me=Me
 member.non_mutual_friend=No mutual connections
@@ -1300,6 +1300,8 @@ skin.silver_moon=Silver Moon
 skin.sky_metallic=Sky Metallic
 skin.white_vision=White Vision
 
+start_tab.welcome_text=Welcome to {APPNAME}
+
 status.port.tip=Connection port number
 status.port.text=Port: {0}
 status.chat_pending=There are chat messages waiting
@@ -1417,8 +1419,6 @@ uilock.dialog.password=Password:
 uilock.dialog.help=Help
 uilock.dialog.exit=Exit
 uilock.dialog.error.wronglogin=Invalid username or password.
-
-welcome_tab.welcome_text=Welcome to {APPNAME} 
 
 winutils.shortcut.description=This shortcut was placed here by {APPNAME}
 
