Drag target for quick back up, fixes #1940

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -1301,6 +1301,7 @@ skin.sky_metallic=Sky Metallic
 skin.white_vision=White Vision
 
 start_tab.welcome_text=Welcome to {APPNAME}
+start_tab.drag_hint=(Drag a folder here to back it up)
 
 status.port.tip=Connection port number
 status.port.text=Port: {0}
