--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -1511,7 +1511,12 @@ wizard.multi_folder_setup.title=Configure Folders
 wizard.multi_folder_setup.no_name.title=No name
 wizard.multi_folder_setup.no_name.text=No name has been entered for {0}
 wizard.multi_online_storage_setup.title=Configure Online Folders
-wizard.pfwizard.title=Folder Wizard
+wizard.pfwizard.folder_title=Folder Wizard
+wizard.pfwizard.invitation_title=Invitation Wizard
+wizard.pfwizard.online_storage_title=Online Storage Wizard
+wizard.pfwizard.login_title=Login Wizard
+wizard.pfwizard.tell_friend_title=Tell a Friend Wizard
+wizard.pfwizard.restore_title=Restore Wizard
 wizard.project_name.folder_project_success=You successfully set up a project folder\!\n
 wizard.select_online_storage.title=Select Online Folders
 wizard.select_online_storage.info=Please select online folders to join locally
