--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -1512,6 +1512,7 @@ wizard.multi_folder_setup.no_name.title=No name
 wizard.multi_folder_setup.no_name.text=No name has been entered for {0}
 wizard.multi_online_storage_setup.title=Configure Online Folders
 wizard.pfwizard.folder_title=Folder Wizard
+pro.wizard.pfwizard.activation_title=Activation Wizard
 wizard.pfwizard.invitation_title=Invitation Wizard
 wizard.pfwizard.online_storage_title=Online Storage Wizard
 wizard.pfwizard.login_title=Login Wizard
