--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -827,7 +827,7 @@ free_limit_dialog.buy_recommendation3=Upgrade {APPNAME} now
 free_limit_dialog.buy_recommendation=It is required that you upgrade to get more usage.
 free_limit_dialog.heavy_usage_detected={APPNAME} has detected that you are extensively using it.
 free_limit_dialog.reason=Only {1} GBs data and {0} folders allowed.
-free_limit_dialog.reduce=Usage warning
+free_limit_dialog.reduce=Reduce usage
 free_limit_dialog.title=Extensive use detected
 free_limit_dialog.whatispro=Why should I upgrade {APPNAME}?
 friend.search.personal.message.text2=You may include a message for {0}
