Button Text Upper Case

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -1197,7 +1197,7 @@ preferences.dialog.inline_info=Display detail information in same window
 dialog.directorychooser.new.description=New directory
 dialog.directorychooser.new.exists=This directory already exists\n\n{0}
 dialog.directorychooser.new.problem=There was a problem creating the directory\n\n{0}
-dialog.directorychooser.use_classic=Classic browser
+dialog.directorychooser.use_classic=Classic Browser
 dialog.directorychooser.error=Error. Please use classic browser.
 preferences.dialog.translucent_frame=Make main frame translucent
 preferences.dialog.min_to_sys_tray=Minimize to system tray
