--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -23,6 +23,15 @@
 # Actions #
 ###########
 
+pro.connect_on_demand.description=Only connects when local files change
+pro.connect_on_demand.name=Connect on demand
+pro.connect_on_demand.options.title=Connect on demand
+pro.connect_on_demand.options.info1={APPNAME} connects only when local files change and a sync is required.
+pro.connect_on_demand.options.info2=It can also periodically connect to check for remote changes.
+
+pro.connect_on_demand.options.connect_every=Periodically connect every
+pro.connect_on_demand.options.minutes=minutes
+
 action_abort_download.description=Abort selected download
 action_abort_download.key=A
 action_abort_download.name=Abort
