--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -377,6 +377,9 @@ pro.wizard.activation.contact_support=Contact support
 pro.wizard.activation.error_invalid_key=Invalid license key
 pro.wizard.activation.error_reading_file=Error while reading license key file
 pro.wizard.activation.error_unable_to_read=Unable to read
+pro.wizard.activation.region=Region
+pro.wizard.activation.region.eu=Europe
+pro.wizard.activation.region.us=North America
 pro.wizard.activation.key_abuse=Too many computers. Please upgrade to continue.
 pro.wizard.activation.key_expired=Your license key has expired\!
 pro.wizard.activation.key_file=License key file
