Copy popup, fixes #1852

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -63,6 +63,10 @@ action_connect.description=Manually connect to a computer
 action_connect.key=C
 action_connect.name=Connect
 
+action_copy.description=Copy text
+action_copy.key=C
+action_copy.name=Copy
+
 action_delete_transfer_mode.description=Delete this transfer mode
 action_delete_transfer_mode.key=D
 action_delete_transfer_mode.name=Delete
@@ -254,6 +258,10 @@ action_resolve_problem.name=Resolve
 action_preview_folder.description=Convert this folder to a preview
 action_preview_folder.key=P
 action_preview_folder.name=Preview
+
+action_select_all.description=Select all text
+action_select_all.key=S
+action_select_all.name=Select All
 
 action_single_file_transfer.description=Transfer file to other computer
 action_single_file_transfer.key=T
