--- a/src/test-resources/ControllerLisa.config
+++ b/src/test-resources/ControllerLisa.config
@@ -12,6 +12,7 @@ port=1154
 net.rcon.port=1155
 random-port=false
 verbose=true
+log.file.level=OFF
 disablebroadcasts=true
 disablercon=true
 networkingmode=LANONLYMODE
