--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -656,10 +656,12 @@ exp_computer_view.collapse=Collapse computer details
 exp_computer_view.expand=Expand computer details
 exp_computer_view.last_seen_text=Last seen online: {0}
 exp_computer_view.connected_text=Connected
-exp_computer_view.node_friend_connected_text=Invitee computer connected
-exp_computer_view.node_friend_disconnected_text=Invitee computer disconnected
-exp_computer_view.node_non_friend_connected_text=Non-invitee computer connected
-exp_computer_view.node_non_friend_disconnected_text=Non-invitee computer disconnected
+exp_computer_view.connecting_text=Connecting...
+exp_computer_view.node_friend_connected_text=Computer connected
+exp_computer_view.node_friend_disconnected_text=Computer disconnected
+exp_computer_view.node_non_friend_connected_text=Computer connected
+exp_computer_view.node_non_friend_disconnected_text=Computer disconnected
+exp_computer_view.node_connecting_text=Connecting to computer
 exp_computer_view.account=User: {0}
 exp_computer_view.no_login=Not logged in
 exp_computer_view.version=Client version: {0}
