--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -458,6 +458,7 @@ about_dialog.general_information=General Information
 about_dialog.home_page=Homepage
 about_dialog.power_folder.build_date=Build date\: {0}
 about_dialog.power_folder.build_time=Build time\: {0}
+about_dialog.power_folder.license=License\:\n{0}
 about_dialog.power_folder.max=Max memory\: {0}MB
 about_dialog.power_folder.text=Version\: {0}
 about_dialog.power_folder.used=Used memory\: {0}MB
