Add syncPatterns field, refs #1227

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -1280,6 +1280,8 @@ settings_tab.basedir.text=It is not possible to move a folder to the base direct
 settings_tab.confirm_local_folder_move.text=Local folder will be moved from\n{0}\nto\n{1}.
 settings_tab.confirm_local_folder_move.title=Confirm move
 settings_tab.download_script=Script after download
+settings_tab.sync_patterns=Synchronize
+settings_tab.sync_patterns.tip=Synchronize patterns with other computers
 settings_tab.edit_a_pattern.text=Edit a pattern to exclude files from sync
 settings_tab.edit_a_pattern.title=Edit a pattern
 settings_tab.folder_not_empty.title=Folder not empty
