--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -418,6 +418,7 @@ pro.wizard.activation.unable_to_login=Unable to login. Email or password wrong?
 pro.wizard.activation.valid_from=Valid from
 pro.wizard.activation.valid_to=Valid to
 pro.wizard.activation.no_key_info=Please activate with an existing account.
+pro.wizard.activation.learn_more=Learn more...
 
 ##############################
 # Config Loader Translations #
